--- a/Sparc nerve activity predictor (snap)/project.json
+++ b/Sparc nerve activity predictor (snap)/project.json
@@ -3,7 +3,7 @@
   "uuid": "fc9038ca-acb3-11e9-9aea-02420aff77ac",
   "name": "Sparc nerve activity predictor (snap)",
   "description": "Interactive, AI-informed computational model of stimulus parameter-dependent vagal nerve responses resulting from bipolar, constant-current stimuli.",
-  "thumbnail": "https://discover.blackfynn.com/dataset-assets/6/7/banner.jpg",
+  "thumbnail": "https://assets.discover.blackfynn.com/dataset-assets/6/7/banner.jpg",
   "prj_owner": "6",
   "creation_date": "2019-07-22 19:07:45.271",
   "last_change_date": "2019-07-22 19:07:45.271",
