--- a/Anatomical model viewer/project.json
+++ b/Anatomical model viewer/project.json
@@ -3,7 +3,7 @@
   "uuid": "14a20508-acb5-11e9-b1ff-02420aff77ac",
   "name": "Anatomical model viewer",
   "description": "Render different human tissue types in three dimensions with the option to highlight or segment parts of: musculature, vasculature, nerve tissue, viscera and skeletal structure.",
-  "thumbnail": "https://discover.blackfynn.com/dataset-assets/18/4/banner.jpg",
+  "thumbnail": "https://assets.discover.blackfynn.com/dataset-assets/18/4/banner.jpg",
   "prj_owner": "6",
   "creation_date": "2019-07-22 19:15:35.923",
   "last_change_date": "2019-07-22 19:15:35.924",
