--- a/Small enteric neural network simulator/project.json
+++ b/Small enteric neural network simulator/project.json
@@ -3,7 +3,7 @@
   "uuid": "05e9404a-acb4-11e9-bf0f-02420aff77ac",
   "name": "Small enteric neural network simulator",
   "description": "This network is designed to study the interactions of different types of synaptic potentials in a realistic enteric neuron and the effects of varying the voltage-dependent ion channels in the output neuron membrane.",
-  "thumbnail": "https://discover.blackfynn.com/dataset-assets/30/5/banner.jpg",
+  "thumbnail": "https://assets.discover.blackfynn.com/dataset-assets/30/5/banner.jpg",
   "prj_owner": "6",
   "creation_date": "2019-07-22 19:08:00.746",
   "last_change_date": "2019-07-22 19:08:00.746",
