Creating markdown with links (#1)
* deletes yaml version

* Removed all projects and added ONLY projects published in production

* Adds readme for each project

* Normalized names and added three badges per project

* updated links in 2dplot

* updated links in 3d visualization

* updated links in anatomical model viewer

* udpated links for cc human

* Udpated kember cardiac model (Only available in production)

* updates links and adds parametrizations in opencor  python model

* deletes duplicated opencor

* Update links CC rabbit

* updates bornstein

* Updates mattward

* Udpates sleepers

* Change assets url from https://discover.blackfynn.com -> https://assets.discover...

--- a/Human cardiac models/project.json
+++ b/Human cardiac models/project.json
@@ -1,38 +1,43 @@
 {
   "type": "TEMPLATE",
-  "uuid": "33eb80e2-524c-11ea-a311-02420a00070b",
-  "name": "[ISAN] CC Human",
-  "description": "",
-  "thumbnail": "",
-  "prj_owner": "1",
-  "creation_date": "2020-02-18 12:43:03.028",
-  "last_change_date": "2020-02-21 09:59:02.357",
+  "uuid": "c7264592-af54-11e9-8346-02420aff7e72",
+  "name": "Human cardiac models",
+  "description": "The workflow integrates multistep single-cell, 1D and 2D model simulations in a single automated process. The model formulation for ventricular cells from humans (Grandi-Bers*) are implemented in the workflow. The model contains beta-adrenergic signaling pathways, and the firing rate model (unpublished Lewis model).",
+  "thumbnail": "https://assets.discover.blackfynn.com/dataset-assets/17/5/banner.jpg",
+  "prj_owner": "6",
+  "creation_date": "2019-07-26 03:23:49.017",
+  "last_change_date": "2019-07-26 03:24:06.438",
   "workbench": {
-    "037d93cf-0734-48a6-81b6-2dde2bf3f24c": {
+    "9fa2c3c5-b15e-5a0b-8dad-025c81374960": {
       "key": "simcore/services/frontend/file-picker",
       "version": "1.0.0",
       "label": "File Picker",
       "inputs": {},
       "inputNodes": [],
-      "thumbnail": "",
+      "outputNode": false,
       "outputs": {
         "outFile": {
           "store": 0,
-          "dataset": "33eb80e2-524c-11ea-a311-02420a00070b",
-          "path": "33eb80e2-524c-11ea-a311-02420a00070b/037d93cf-0734-48a6-81b6-2dde2bf3f24c/initial_WTStates_Human.txt",
-          "label": "initial_WTStates_Human.txt"
+          "path": "c7264592-af54-11e9-8346-02420aff7e72/9fa2c3c5-b15e-5a0b-8dad-025c81374960/initial_WTStates_Human.txt",
+          "label": "initial_WTStates_Human"
         }
       },
       "progress": 100,
+      "thumbnail": "",
       "position": {
-        "x": 23,
-        "y": 44
+        "x": 39,
+        "y": 120
       }
     },
-    "bbcd45f9-5798-402a-859b-de070221a915": {
+    "76f0bf38-a32a-5860-8aa3-a5351e02760b": {
       "key": "simcore/services/comp/human-gb-0d-cardiac-model",
       "version": "1.0.0",
       "label": "Human GB 0D cardiac model",
+      "inputAccess": {
+        "TargetHeartRatePhase1": "ReadOnly",
+        "TargetHeartRatePhase2": "ReadOnly",
+        "TargetHeartRatePhase3": "ReadOnly"
+      },
       "inputs": {
         "Na": 0,
         "GKr": 1,
@@ -45,24 +50,32 @@
         "tissue_size_tl": 165,
         "Homogeneity": "homogeneous",
         "initialWTStates": {
-          "nodeUuid": "037d93cf-0734-48a6-81b6-2dde2bf3f24c",
+          "nodeUuid": "9fa2c3c5-b15e-5a0b-8dad-025c81374960",
           "output": "outFile"
         },
         "num_threads": 2
       },
       "inputNodes": [
-        "037d93cf-0734-48a6-81b6-2dde2bf3f24c"
+        "9fa2c3c5-b15e-5a0b-8dad-025c81374960"
       ],
+      "outputNode": false,
+      "outputs": {},
+      "progress": 0,
       "thumbnail": "",
       "position": {
-        "x": 259,
-        "y": 13
+        "x": 282,
+        "y": 39
       }
     },
-    "8cfbf674-a9e1-4e6c-98e3-8aa382c067c6": {
+    "2e30e868-ef47-591c-b3fa-1f208d557604": {
       "key": "simcore/services/comp/human-gb-1d-cardiac-model",
       "version": "1.0.0",
       "label": "Human GB 1D cardiac model",
+      "inputAccess": {
+        "TargetHeartRatePhase1": "ReadOnly",
+        "TargetHeartRatePhase2": "ReadOnly",
+        "TargetHeartRatePhase3": "ReadOnly"
+      },
       "inputs": {
         "Na": 0,
         "GKr": 1,
@@ -75,21 +88,24 @@
         "tissue_size_tl": 165,
         "Homogeneity": "homogeneous",
         "initialWTStates": {
-          "nodeUuid": "037d93cf-0734-48a6-81b6-2dde2bf3f24c",
+          "nodeUuid": "9fa2c3c5-b15e-5a0b-8dad-025c81374960",
           "output": "outFile"
         },
         "num_threads": 2
       },
       "inputNodes": [
-        "037d93cf-0734-48a6-81b6-2dde2bf3f24c"
+        "9fa2c3c5-b15e-5a0b-8dad-025c81374960"
       ],
+      "outputNode": false,
+      "outputs": {},
+      "progress": 0,
       "thumbnail": "",
       "position": {
-        "x": 261,
-        "y": 171
+        "x": 283,
+        "y": 211
       }
     },
-    "0e30337a-21e0-4909-b3d3-7d3ffc68c9b6": {
+    "21f5a2d3-a97f-524a-8e70-4533e4c2eb66": {
       "key": "simcore/services/comp/human-gb-2d-cardiac-model",
       "version": "1.0.0",
       "label": "Human GB 2D cardiac model",
@@ -105,81 +121,94 @@
         "tissue_size_tl": 165,
         "Homogeneity": "homogeneous",
         "input_from_1d": {
-          "nodeUuid": "8cfbf674-a9e1-4e6c-98e3-8aa382c067c6",
+          "nodeUuid": "2e30e868-ef47-591c-b3fa-1f208d557604",
           "output": "output_3"
         },
         "num_threads": 2
       },
       "inputNodes": [
-        "8cfbf674-a9e1-4e6c-98e3-8aa382c067c6"
+        "2e30e868-ef47-591c-b3fa-1f208d557604"
       ],
+      "outputNode": false,
+      "outputs": {},
+      "progress": 0,
       "thumbnail": "",
       "position": {
-        "x": 462,
-        "y": 287
+        "x": 527,
+        "y": 336
       }
     },
-    "dafd373b-f8e0-4daa-8a87-b0113e2a95f1": {
+    "168bf776-80ef-51aa-8d78-e5b91c0f7753": {
       "key": "simcore/services/dynamic/cc-0d-viewer",
       "version": "3.0.4",
       "label": "0D cardiac model viewer",
       "inputs": {
         "vm1Hz": {
-          "nodeUuid": "bbcd45f9-5798-402a-859b-de070221a915",
+          "nodeUuid": "76f0bf38-a32a-5860-8aa3-a5351e02760b",
           "output": "vm1Hz"
         }
       },
       "inputNodes": [
-        "bbcd45f9-5798-402a-859b-de070221a915"
+        "76f0bf38-a32a-5860-8aa3-a5351e02760b"
       ],
+      "outputNode": false,
+      "outputs": {},
+      "progress": 100,
       "thumbnail": "",
       "position": {
-        "x": 678,
-        "y": 13
+        "x": 802,
+        "y": 35
       }
     },
-    "66610243-a8ce-42c9-bcef-a0c85ea79d1a": {
+    "b922304c-7a85-53c7-975e-ed01eb7c861d": {
       "key": "simcore/services/dynamic/cc-1d-viewer",
       "version": "3.0.3",
       "label": "1D cardiac model viewer",
       "inputs": {
         "ECGs": {
-          "nodeUuid": "8cfbf674-a9e1-4e6c-98e3-8aa382c067c6",
+          "nodeUuid": "2e30e868-ef47-591c-b3fa-1f208d557604",
           "output": "output_1"
         },
         "APs": {
-          "nodeUuid": "8cfbf674-a9e1-4e6c-98e3-8aa382c067c6",
+          "nodeUuid": "2e30e868-ef47-591c-b3fa-1f208d557604",
           "output": "output_2"
         }
       },
       "inputNodes": [
-        "8cfbf674-a9e1-4e6c-98e3-8aa382c067c6"
+        "2e30e868-ef47-591c-b3fa-1f208d557604"
       ],
+      "outputNode": false,
+      "outputs": {},
+      "progress": 100,
       "thumbnail": "",
       "position": {
-        "x": 680,
-        "y": 170
+        "x": 808,
+        "y": 209
       }
     },
-    "25dd1664-363f-4156-a3a4-b5d91eff7b01": {
+    "d7756411-2cbf-534d-a488-1ea2289fcd65": {
       "key": "simcore/services/dynamic/cc-2d-viewer",
       "version": "3.0.3",
       "label": "2D cardiac model viewer",
       "inputs": {
         "ap": {
-          "nodeUuid": "0e30337a-21e0-4909-b3d3-7d3ffc68c9b6",
+          "nodeUuid": "21f5a2d3-a97f-524a-8e70-4533e4c2eb66",
           "output": "output_1"
         }
       },
       "inputNodes": [
-        "0e30337a-21e0-4909-b3d3-7d3ffc68c9b6"
+        "21f5a2d3-a97f-524a-8e70-4533e4c2eb66"
       ],
+      "outputNode": false,
+      "outputs": {},
+      "progress": 100,
       "thumbnail": "",
       "position": {
-        "x": 689,
-        "y": 287
+        "x": 802,
+        "y": 335
       }
     }
   },
-  "published": "1"
+  "published": "1",
+  "access_rights": "{\"1\": \"rwx\"}"
 }
