--- a/Many sleepers/project.json
+++ b/Many sleepers/project.json
@@ -1,6 +1,6 @@
 {
     "uuid": "c408404c-ab0f-11ea-a7a7-02420a003106",
-    "name": "Sleepers. A lot.",
+    "name": "Many sleepers",
     "description": "Many sleepers interconnected",
     "thumbnail": "https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fimage.slidesharecdn.com%2Flapersistenciadelamemoria-140804210719-phpapp01%2F95%2Fla-persistencia-de-la-memoria-4-638.jpg%3Fcb%3D1407186503&amp;f=1",
     "prjOwner": "maiz@itis.swiss",
